# spaceport

./: .env.example  .gitignore  404.html  AGENTS.md  Justfile  LICENSE  Makefile  NOTICE  README.md  dev.sh  docker-compose.yaml  index.html  mkdocs.yaml  projectplan.md
.github/workflows/: build-images.yaml  publish-chart.yaml  release.yaml
api/: .gitignore  Dockerfile  go.mod  go.sum  main.go  spaceport.db-shm  spaceport.db-wal
docs/: demo-instrumentation-walkthrough.md  demo-script.md  index.md  information-desk.md  service-names.md
docs/getting-started/: architecture.md  quickstart.md
docs/grafana/: dashboard.json
docs/hooks/: semconv_hide_toc.py
docs/reference/: helm-integration.md
docs/stylesheets/: spaceport.css
docs/tutorials/: index.md  semconv-policies.md  semconv-templates.md  weaver-semconv.md
frontend/: .env.example  Dockerfile  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  instrumentation.ts  main.tsx
getting-started/architecture/: index.html
getting-started/quickstart/: index.html
openspec/: config.yaml
policies/: yaml_schema.rego
pricing-service/: Dockerfile  pyproject.toml
pricing-service/data/: currencies.json
pricing-service/pricing_service/: logging_config.py  main.py  pricing.py  recommendations.py  telemetry.py
pricing-service/pricing_service/semconv/: __init__.py  attribute.py  metric.py  span.py
pricing-service/tests/: test_endpoints.py
search/: search_index.json
semconv/: index.html
tutorials/: index.html
weaver/: registry_manifest.yaml
(+225 files in other folders)
